--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>First Example</title>
 </head>
 <body>
-    <div>First Example</div>
+    <div>First <s>Example</s> WebPage</div>
 </body>
 </html>
