Updated text in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>First Example</title>
 </head>
 <body>
-    <div>First <s>Example</s> WebPage</div>
+    <div>First <s>Example</s> <s>WebPage</s> Basic WebPage that auto deploys on surge by the help of github workflow</div>
 </body>
 </html>
